WORKING API CALL TO APP

--- a/app/src/main/res/layout/stock_item.xml
+++ b/app/src/main/res/layout/stock_item.xml
@@ -26,4 +26,11 @@
         android:layout_weight="1"
         android:text="+0.00%" />
 
+    <TextView
+        android:id="@+id/stockVolume"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Volume: 0" />
+
 </LinearLayout>
