WORKING API CALL TO APP

--- a/app/src/main/res/layout/stock_item.xml
+++ b/app/src/main/res/layout/stock_item.xml
@@ -2,35 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
         android:id="@+id/stockName"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Stock Name" />
+        android:text="Stock Name"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/stockPrice"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="$0.00" />
+        android:text="$0.00"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/stockChange"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="+0.00%" />
-
-    <TextView
-        android:id="@+id/stockVolume"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Volume: 0" />
+        android:text="+0.00%"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
 </LinearLayout>
