--- a/app/src/main/res/layout/fragment_stock_graph.xml
+++ b/app/src/main/res/layout/fragment_stock_graph.xml
@@ -14,6 +14,54 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
+    <!-- Button layout for time intervals -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnOneHour"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1h"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/btnOneDay"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1d"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/btnOneWeek"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1wk"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/btnOneMonth"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1mo"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/btnThreeMonths"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="3mo"
+            android:layout_margin="4dp"/>
+    </LinearLayout>
+
     <!-- Graph view for stock price -->
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
@@ -28,7 +76,5 @@
         android:layout_height="wrap_content"
         android:text="Stock Price"
         android:textSize="16sp" />
-
-    <!-- More TextViews can be added as needed for other stock details -->
 
 </LinearLayout>
