YAHOO API set up #1

--- a/app/src/main/res/layout/stock_item.xml
+++ b/app/src/main/res/layout/stock_item.xml
@@ -26,6 +26,13 @@
         android:text="+0.00%"
         android:textAppearance="?attr/textAppearanceListItem" />
 
+    <TextView
+        android:id="@+id/stockLatestPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Latest Price: $0.00"
+        android:textAppearance="?attr/textAppearanceListItem" />
+
 
     <Button
         android:id="@+id/removeButton"
