--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -9,10 +9,12 @@
             android:id="@+id/nav_stock_market"
             android:icon="@drawable/ic_stock_market"
             android:title="The Stock Market" />
+
         <item
-            android:id="@+id/nav_friends"
-            android:icon="@drawable/ic_friends"
-            android:title="Friends" />
+            android:id="@+id/nav_news"
+            android:icon="@drawable/ic_news"
+            android:title="@string/nav_news" />
+
         <item
             android:id="@+id/nav_options"
             android:icon="@drawable/ic_options"
