WORKING STOCKS, STOCK TRACKING/HOME AND NEWS SECTIONS

--- a/app/src/main/res/layout/fragment_stock_market.xml
+++ b/app/src/main/res/layout/fragment_stock_market.xml
@@ -3,10 +3,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/topBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <SearchView
+            android:id="@+id/searchView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/btnSort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sort"
+            android:layout_marginStart="8dp"/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/stockMarketRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/topBarLayout"
         android:padding="16dp"
         android:clipToPadding="false" />
 
@@ -17,5 +39,4 @@
         android:layout_centerInParent="true"
         android:text="No stocks available!"
         android:visibility="gone" />
-
 </RelativeLayout>
