--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -16,8 +16,8 @@
             android:title="@string/nav_news" />
 
         <item
-            android:id="@+id/nav_options"
-            android:icon="@drawable/ic_options"
-            android:title="Options" />
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_logout"
+        android:title="Logout"/>
     </group>
 </menu>
